fix :: removed scroll overflow from s-xl-sidebar

--- a/src/styles/7-super/_s-xl-sidebar.scss
+++ b/src/styles/7-super/_s-xl-sidebar.scss
@@ -1,12 +1,12 @@
 //the dummmy sidebar for when the main sidebar is fixed
 //this keeps the layout in tact
 .s-xl-sidebar{
+    overflow:hidden;
     @include mq(1120px, null, 600px) {
         //gutters
         @include wt(third);
         max-width: 425px;
         padding: 0 sz(xxl);
         height: 100vh;
-        overflow: scroll; 
     }
 }
